preview/ckad-app/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ckad-app
  namespace: ${NAMESPACE}
spec:
  selector:
    app: ckad-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
